@@ -2,7 +2,7 @@
 
 <beans>
     <bean id="manager" class="edu.mcw.rgd.gff3.Manager">
-        <property name="version" value="--Gff3 generation pipeline -- build Sep 13, 2024 --" />
+        <property name="version" value="--Gff3 generation pipeline -- build Nov 01, 2024 --" />
 
         <property name="assemblies"><!-- file system location for files for given assembly: must be the same as found in '/ref/fasta' directory -->
             <map>
@@ -26,8 +26,10 @@
                 <entry key="911" value="data/jbrowse2/Pig" />
                 <entry key="910" value="data/jbrowse2/Pig" />
 
-                <entry key="634" value="data/jbrowse2/Dog" />
                 <entry key="631" value="data/jbrowse2/Dog" />
+                <entry key="633" value="data/jbrowse2/Dog" /> <!-- Dog10K_Boxer_Tasha -->
+                <entry key="634" value="data/jbrowse2/Dog" /> <!-- ROS_Cfam_1.0 -->
+                <entry key="637" value="data/jbrowse2/Dog" /> <!-- UU_Cfam_GSD_1.0 -->
 
                 <entry key="1313" value="data/jbrowse2/Green Monkey" />
                 <entry key="1311" value="data/jbrowse2/Green Monkey" />
@@ -77,8 +79,10 @@
                 <value>911</value>  <!-- Pig/susScr11 -->
                 <value>910</value>  <!-- Pig/susScr3 -->
 
-                <value>634</value>  <!-- Dog/ROS_Cfam_1.0 -->
                 <value>631</value>  <!-- Dog/canFam3 -->
+                <value>633</value>  <!-- Dog10K_Boxer_Tasha -->
+                <value>634</value>  <!-- Dog/ROS_Cfam_1.0 -->
+                <value>637</value>  <!-- UU_Cfam_GSD_1.0 -->
 
                 <value>1313</value>  <!-- Green Monkey/veroWho -->
                 <value>1311</value>  <!-- Green Monkey/chlSab2 -->
@@ -189,8 +193,10 @@
                 <value>911</value>  <!-- Pig/susScr11 -->
                 <value>910</value>  <!-- Pig/susScr3 -->
 
-                <value>634</value>  <!-- Dog/ROS_Cfam_1.0 -->
                 <value>631</value>  <!-- Dog/canFam3 -->
+                <value>633</value>  <!-- Dog10K_Boxer_Tasha -->
+                <value>634</value>  <!-- Dog/ROS_Cfam_1.0 -->
+                <value>637</value>  <!-- UU_Cfam_GSD_1.0 -->
 
                 <value>1313</value>  <!-- Green Monkey/veroWho -->
                 <value>1311</value>  <!-- Green Monkey/chlSab2 -->
@@ -284,8 +290,10 @@
                 <value>911</value>  <!-- Pig/susScr11 -->
                 <value>910</value>  <!-- Pig/susScr3 -->
 
-                <value>634</value>  <!-- Dog/ROS_Cfam_1.0 -->
                 <value>631</value>  <!-- Dog/canFam3 -->
+                <value>633</value>  <!-- Dog10K_Boxer_Tasha -->
+                <value>634</value>  <!-- Dog/ROS_Cfam_1.0 -->
+                <value>637</value>  <!-- UU_Cfam_GSD_1.0 -->
 
                 <value>1313</value>  <!-- Green Monkey/veroWho -->
                 <value>1311</value>  <!-- Green Monkey/chlSab2 -->
